css/styles.css
*,
*::after,
*::before {
    margin: 0;
    padding: 0;
    box-sizing: inherit;
}

body {
  box-sizing: border-box;
  /* overflow: -moz-scrollbars-vertical;
  overflow-x: hidden;
  overflow-y: auto; */
}

html {
  // This defines what 1rem is
  font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5%
}

/** Navigation **/

.navbar {
  width: 100%;
  margin: 0;
}

.brand-name {
  display: inline-block;
  /* width: 10rem; */
  padding: .5rem 0;
  margin-left: 0;
}

/* .navbar > span {
  padding-right: 0
} */

nav ul {
  list-style: none;
  margin: 0;
  padding: 0
}

nav ul li {
  display: inline-block;
  font-size: 13px;
}
/* 
header {

  margin: auto;
  /* position: relative; */
  /* top:58px; */
} */

.nav-item {
  font-size: 16px;
  padding-right: 10px;
  /* min-width: 80px; */
}

.lead:first-of-type {
  padding-top: 15px; 
  font-size: 15px;
  padding-bottom: 10px;
  letter-spacing: 2px;
}

.lead:last-of-type {
  padding: 20px;
  letter-spacing: 2px;
  font-size: 15px;
}

.lead {
  margin-bottom: 0;
}

.jumbotron {
  height: 100vh;
  margin: 0 auto;
  max-width: 1500px;
  background: url(../img/bg-theme.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position:center;
  color: whitesmoke;
  padding: 0px;
  text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
}

.svg-inline--fa {
  margin: 20px 0;
  font-size: 18px;
}

a {
  width: 50px;
  color: whitesmoke;
  /* padding: 10px; */
  font-size: 12px;
  margin: 0 10px;
}

a:active, a:hover, a:visited {
  color: whitesmoke;
}

.display-1  {
  font-size: 30px;
}

.img { 
  /* position: relative; */
  margin-top: 50px;}


.img > img {
  width: 270px;
  height: 350px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  position: relative;
}

.img:after {
  content: '';
  width: 200px;
  position: absolute;
  top: -10%;
  bottom: -8%;
  left: 10%;
  background-image: url(../img/dots.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  z-index: -1;
  opacity: .3;
}

.about-hg2 {
  color: #555;
  font-weight: 800;
  text-align: center;
  width: 100%;
  padding: 30px 20px;

}

.about-hg4 {
  margin: 10px 0 15px;
  color: #555;
  font-weight: 700;
  font-size: 16px;
  padding: 20px 0;
  
}
 
.about-text {
  color: #8a8a8a;
  font-size: 14px;
  line-height: 2;
}

.jumbotron-text {
  margin-top: 20px;
  width: 100%;
}

.action-btn {
  margin-top: 15px;
  background-color: transparent;
  border: 1px solid whitesmoke;
  border-radius: 30px;
  padding: 8px;
  letter-spacing: 1.5px;
  width: 160px;
  font-size: 13px;
  color: whitesmoke;
}

.action-btn:hover {
  background-color: whitesmoke;

}

img {
  width: 100%;
  height: auto;
}

.contact {
  padding: 20px;
  width: 80%;
  max-width: 550px;
  margin: 150px auto;
}

.contact-hg2, .portfolio-hg2 {
  color: #555;
  font-weight: 800;
  text-align: center;
  margin-bottom: 30px;
  padding: 30px 20px;
}

input {
  margin-bottom: 10px;
  background-color: #fafafa;
  border: none;
}

input::placeholder, textarea::placeholder {

  font-size: 11px;
  font-weight: 600;
  padding: 5px;
}

.test {
  border: 1px solid red;
}

.submit-btn {
  background-color: #111;
  font-size: 11px;
  padding: 12px;
  display: block;
  width: 180px;
  margin: 40px auto 0;
  border: none;
  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
  transition: all .5s;
}

.submit-btn:hover {
  background-color: transparent;
  color:#111;
  border: 1px solid #111;

}

.card {
  position: relative;
  max-width: 260px;
  height: 180px;
  margin: 15px;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  opacity: 1;
  border-radius: 4px;
  box-shadow: 1px 1px 2px rgba(0, 0, 0, .3);
  background-image: url("../img/item_1.png");
}

.overlay {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(255, 255, 255, 0.95);
  transform: translateX(-100%);
  /* overflow: hidden;
  width: 100%;
  height:0; */
  transition: opacity .5s ease;
  /* text-align: center; */
}

.card:hover .overlay, .card:active .overlay {
  /* bottom: 0; */
  width: 100%;
  opacity: 1;
}

/* .overlay {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(255, 255, 255, 0.95);
  opacity: 1;
  transform: translateX(-100%);
  transition: opacity .5s;
} */

/* .portolio-item:hover .overlay {
  opacity: 1;
} */

.footer {
  margin: 0;
}
.footer-social {
  background-color: #111;
  color: whitesmoke;
  text-align: center;
}

.footer-social ul {
  list-style: none;
  text-align: center;
  padding: 0;
  margin: 0;
}

.footer-social li {
  display: inline-block;
}

.footer-social .svg-inline--fa {
  font-size: 14px;
}

.footer-social p {
  padding: 20px;
  font-size: 12px;
}


 @media (min-width: 868px) { 
  .jumbotron-text {
    padding-top: 80px;
    f
  }

  .lead:first-of-type, .lead:last-of-type {
    font-size: 22px;
  }

  .display-1  {
    font-size: 50px;
  }

  .svg-inline--fa {
    margin: 20px 0;
    font-size: 25px;
  }

  .about {
    height: 100vh;
    padding: 190px 20px 0;
  }
 } 

